fixed todo and completed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body{
     background-color: cornflowerblue;
     padding: 20px;
     text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
 }
 
 form{
@@ -20,6 +22,13 @@ div#todo, div#completed{
     padding-bottom: 10px;
     border-radius: 10px;
     height: 300px;
+    overflow: auto;
+}
+
+
+
+p:hover{
+    background-color: white;
 }
 
 div#todo{
@@ -38,6 +47,7 @@ input{
     text-align: center;
     border-radius: 10px;
 }
+
 
 @media only screen and (max-width: 600px){
     body{
